--- a/views/tv.pug
+++ b/views/tv.pug
@@ -1,8 +1,9 @@
 extends layout
 
 block content
+  link(rel='stylesheet', href='/stylesheets/tv.css')
   h1= title
   - let items = results
   div(class = "container-fluid")
     div(class = "row")
-      div(class = "col-sm-2") #{items}
+      div(class = "col-sm-2") #{items} br
