--- a/views/tv.pug
+++ b/views/tv.pug
@@ -5,5 +5,13 @@ block content
   h1= title
   - let items = results
   div(class = "container-fluid")
-    div(class = "row")
-      div(class = "col-sm-2") #{items}
+    div(class = "row m-1")
+      each item in items
+        - let destination = `dispatch(\"/tv/update?id=${item._id}\")` 
+        div(class = "col-sm-2") TV: #{item.brand} #{item.screen} #{item.screen_size}
+        button.btn(class="btn-primary ml-1", onclick= destination) Update 
+
+  script. 
+    function dispatch(path){ 
+      window.location.href=path 
+    } 
