--- a/views/index.pug
+++ b/views/index.pug
@@ -1,15 +1,12 @@
-extends layout
-
-block content
-  h1= title
-  p Assignment 10
-  button(type="button" class="btn btn-primary" onclick="update()") Push me
-  div(id="target") Display
-  a(href="/tv") Search Results Page
-  script. 
-    var client_count = 0
-    function update() {
-      client_count++
-      document.getElementById("target").innerHTML = "Value now " + client_count
-    }
-
+extends layout 
+ 
+block content 
+  if (!user) 
+    a(href="/login") Login 
+    br 
+    a(href="/register") Register 
+  if (user) 
+    p You are currently logged in as #{user.username} 
+    a(href="/tv") Take me to TVs 
+    br 
+    a(href="/logout") Logout 
